--- a/atividade-prática-módulo-2/protótipo-site/package.json
+++ b/atividade-prática-módulo-2/protótipo-site/package.json
@@ -7,7 +7,8 @@
     "bootstrap": "^5.1.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "[Other] build --output public"
   },
   "repository": {
     "type": "git",
